--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@ our family of staff and patients.</div>
 				<i><h4 style="line-height:25px; margin-top: -6px;">315-637-7684<br>
 				7197 Highbridge Rd.
 				<br>Fayetteville, NY
-				<br>Directions<br>Email Us</h4></i>
+				<br>Directions<br><span class="email">Email Us</span></h4></i>
 			</div>			
 		</div>
 	</div>
