--- a/app/views/static_pages/athleticmouthguards.html.erb
+++ b/app/views/static_pages/athleticmouthguards.html.erb
@@ -53,7 +53,7 @@
 			</p>
 			<p>
 				<b>Durability</b><br>
-				Glidewell and Bite Tech exclusive licensee of UA Performance Mouthwear, employ the most advanced Multi-Layered Pressure Laminated technology to create your custom made TLC athletic to assure necessary thickness, protection and durability.<br>
+				Glidewell and Bite Tech, exclusive licensee of UA Performance Mouthwear, employ the most advanced Multi-Layered Pressure Laminated technology to create your custom made TLC athletic to assure necessary thickness, protection and durability.<br>
 			</p>
 			<p>
 				<b>More Information</b><br>
