--- a/app/views/static_pages/badbreath.html.erb
+++ b/app/views/static_pages/badbreath.html.erb
@@ -19,7 +19,7 @@
 				<li>Infections in the mouth</li>
 				<li>Dry Mouth (Xerostomia)</li>
 				<li>Respiratory trace infections</li>
-				<li>Diseases of the liver, lung, kidney, digestive trace, and sinus; diabetes, reflux, etc.</li>
+				<li>Diseases of the liver, lung, kidney, digestive tract, and sinus; diabetes, reflux, etc.</li>
 				<li>Smoking and chewing tobacco</li>
 			</ul>
 			<p>	
