--- a/app/views/static_pages/bleedinggums.html.erb
+++ b/app/views/static_pages/bleedinggums.html.erb
@@ -46,10 +46,10 @@
 				<li>Pain when chewing</li>
 			</ul>
 			<p>
-				If you experience any of these symptoms, it is vitally important that you seek prompt treatment from TLC.  We will address your symptoms with a methodical examination, a thorough and therapeutic professional cleaning, and offer additional options such as TLC Arestin Treatment  and a Soft Tissue Management (STM) program to restore your oral health.  For more information on TLC Arestin Treatment click here.  For more information on Soft Tissue Management click here.<br>
+				If you experience any of these symptoms, it is vitally important that you seek prompt treatment from TLC.  We will address your symptoms with a methodical examination, a thorough and therapeutic professional cleaning, and offer additional options such as TLC Arestin Treatment  and a Soft Tissue Management (STM) program to restore your oral health.  For more information on TLC Arestin Treatment click here.  For more information on Soft Tissue Management click <%= link_to "here", preventivedentistry_softtissue_path %>.<br>
 			</p>
 			<p>
-				Throughout your corrective procedure you will enjoy the comfort of our signature “Gentle Dentistry.” 
+				Throughout your corrective procedure you will enjoy the comfort of our signature “Gentle Dentistry". 
 			</p>
 			<p>
 				For definitions related to gingivitis and periodontitis consult Dr. Rothenberg's Dental Dictionary.  And for prompt treatment and alleviation of swollen, tender, bleeding gums, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
