--- a/app/views/static_pages/brokendentures.html.erb
+++ b/app/views/static_pages/brokendentures.html.erb
@@ -12,7 +12,7 @@
 			<h3>Broken or Ill Fitting Dentures</h3>
 			<%= image_tag 'wisdomtooth.jpg', :class => "float-right" %>	
 			<p>
-				If your dentures are broken or ill-fitting, you should seek prompt treatment from TLC Dental to assure your dental health and comfort.  If your dentures are ill fitting, we will adjust them for a proper fit.  If they are broken, we will attempt to repair them tor, if they are irreparable, we will replace them with new dentures for optimum comfort in eating, speaking, and smiling. <br>
+				If your dentures are broken or ill-fitting, you should seek prompt treatment from TLC Dental to assure your dental health and comfort.  If your dentures are ill fitting, we will adjust them for a proper fit.  If they are broken, we will attempt to repair them or, if they are irreparable, we will replace them with new dentures for optimum comfort in eating, speaking, and smiling. <br>
 			</p>
 			<p>
 				Throughout your examination and treatment you will enjoy the comfort of our signature "Gentle Dentistry.
