--- a/app/views/static_pages/crowns.html.erb
+++ b/app/views/static_pages/crowns.html.erb
@@ -22,7 +22,7 @@
 				<li>Cover a dental implant</li>
 				<li>Cover a discolored or poorly shaped tooth</li>
 				<li>Cover a brittle tooth that has had root canal treatment</li>
-				<li>Create your (Dream Smile)</li>
+				<li>Create your "Dream Smile"</li>
 			</ul>
 
 			<p>
