--- a/app/views/static_pages/dentures.html.erb
+++ b/app/views/static_pages/dentures.html.erb
@@ -24,7 +24,7 @@
 				<li>Restore normal speech often distorted by missing teeth</li>
 				<li>Restore appearance and self confidence diminished by missing teeth</li>
 				<li>Greatly reduce the risk of temporomandibular joint (TMJ) disorders caused by missing teeth
-				<li>Create your (Dream Smile)</li>
+				<li>Create your "Dream Smile"</li>
 			</ul>
 
 			<p>
@@ -42,7 +42,7 @@
 				TLC Dental draws on art and technology to create a full denture that reflects your uniqueness and distinctive appearance as well as your sense of comfort in eating, speaking, and smiling.  We begin by taking a precise impression and detailed measurements of both the upper and lower parts of your mouth that we use to form a wax model of your denture.<br>
 			</p>
 			<p>
-				This “Try-in Denture” becomes a model for your desired look and feel.  You can choose from our vast palette of shapes, sizes, and colors to create the components of your (Dream Smile) and try it “in” for look and feel. Your dream then comes true when a highly specialized laboratory, in accordance with our exacting specifications, transforms the detailed model into your unique dentures.<br>
+				This “Try-in Denture” becomes a model for your desired look and feel.  You can choose from our vast palette of shapes, sizes, and colors to create the components of your "Dream Smile" and try it “in” for look and feel. Your dream then comes true when a highly specialized laboratory, in accordance with our exacting specifications, transforms the detailed model into your unique dentures.<br>
 			</p>
 			<p>
 				The next step of your denture preparation is an essential one of emplacement, a process that may be facilitated by implant posts or fasteners.  Once in place, and particularly in the initial period of denture use, Dr. Rothenberg and his experienced staff will work with you in fine tuning and adjusting your dentures for optimum comfort in eating, speaking, and smiling.<br>
