--- a/app/views/static_pages/flouridetreatment.html.erb
+++ b/app/views/static_pages/flouridetreatment.html.erb
@@ -1,4 +1,4 @@
-<title>Flouride Treatments | TLC Dental Group Syracuse</title>
+<title>Fluoride Treatments | TLC Dental Group Syracuse</title>
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>TLC Flouride Treatment </h3>
+			<h3>TLC Fluoride Treatment </h3>
 			<p>			
 				Fluoride is a mineral that is found naturally in air, water, soil, and foods such meat, fish, eggs, and tea.  It also is found in city water systems, toothpastes, mouthwashes, pills and gels and it is essential to the formation and maintenance of healthy teeth.<br>
 			</p>
@@ -34,7 +34,7 @@
 			</ul>
 			<p>
 				<b>Risks of Fluoride</b><br>
-				Normally fluoride is exceptionally beneficial but there can be too much of a good thing for in high doses it may be hazardous, particularly to children for who might develop fluorosis and teeth discoloration. This easily treatable condition largely results from children drinking well water with high fluoride levels or swallowing excessive amounts of toothpaste and/or supplementary pills It does not derive from municipal fluoridated water that has safe and strictly controlled levels of fluoridation.<br>
+				Normally fluoride is exceptionally beneficial but there can be too much of a good thing for in high doses it may be hazardous, particularly to children for who might develop fluorosis and teeth discoloration. This easily treatable condition largely results from children drinking well water with high fluoride levels or swallowing excessive amounts of toothpaste and/or supplementary pills. It does not derive from municipal fluoridated water that has safe and strictly controlled levels of fluoridation.<br>
 			</p>
 			<p>
 				<b>Fluoride Supplements and Treatments</b><br>
@@ -63,7 +63,7 @@
 			</p>
 			<p>
 				<b>More Information</b></br>
-				For more information on fluoride treatments, click on Dr. Rothenberg’s Dental Encyclopedia.  And to schedule a TLC fluoride treatment consultation, please call the TLC Dental Group Fayetteville / Manlius office at 315-637-7684.
+				For definitions related to fluoride consult Dr. Rothenberg's Dental Dictionary.  And to schedule a TLC fluoride treatment consultation, please call the TLC Dental Group Fayetteville / Manlius office at 315-637-7684.
 			</p>
 		</div>
 	</div>
