--- a/app/views/static_pages/oralhygiene.html.erb
+++ b/app/views/static_pages/oralhygiene.html.erb
@@ -33,7 +33,7 @@
 			</ul>
 			<p>
 				<b>The Advantages of TLC Rotadent Brushing</b><br>
-				The Rotadent has proven far more effective than any manual or electric toothbrush in maintaining dental health.  Click here to learn the many advantages of a Rotadent.<br>
+				The Rotadent has proven far more effective than any manual or electric toothbrush in maintaining dental health.  Click <%= link_to "here", preventivedentistry_rotadent_path %> to learn the many advantages of a Rotadent.<br>
 			</p>
 			<%= image_tag 'rotadent.jpg', :class => "float-right" %>
 			<p>
@@ -82,11 +82,11 @@
 			</p>
 			<p>
 				<b>TLC Soft Tissue Management</b><br>
-				Much like the Recare, essential elements of our Soft Tissue Management system, including periodontal examinations, removal of tartar and calculus through scaling and root planing with the Cavitron Jet Plus, and Arestin and fluoride treatments cannot be achieved through personal oral hygiene.  The health of your teeth and gum tissues depends on both good personal oral hygiene and STM.   Click here for details on this important dental system.<br>
+				Much like the Recare, essential elements of our Soft Tissue Management system, including periodontal examinations, removal of tartar and calculus through scaling and root planing with the Cavitron Jet Plus, and Arestin and fluoride treatments cannot be achieved through personal oral hygiene.  The health of your teeth and gum tissues depends on both good personal oral hygiene and STM.   Click <%= link_to "here", preventivedentistry_softtissue_path %> for details on this important dental system.<br>
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For more information on Oral Hygiene, click on Dr. Rothenberg’s Dental Encyclopedia. And for a consultation on oral hygiene and a copy of the TLC Oral Hygiene booklet, please call the TLC Dental Group, Fayetteville / Manlius office at (315)-637-7684
+				For definitions related to oral hygiene consult Dr. Rothenberg's Dental Dictionary. And for a consultation on oral hygiene and a copy of the TLC Oral Hygiene booklet, please call the TLC Dental Group, Fayetteville / Manlius office at (315)-637-7684
 			</p>
 		</div>
 	</div>
