--- a/app/views/static_pages/preventivedentalcleaning.html.erb
+++ b/app/views/static_pages/preventivedentalcleaning.html.erb
@@ -12,7 +12,7 @@
 			<h3>Professional Dental Cleaning</h3>
 			<%= image_tag 'recaretooth.jpg', :class => "float-right" %>
 			<p>
-				A Professional Dental Cleaning or “Recare” figures prominently in Dream Smile Solutions, Common Dental Problems, and Preventive Dentistry.  It is in many ways the copestone of our collective dental treatments and is fundamental to achieving and maintaining your “Dream Smile”.  For details on Recare click here.<br>
+				A Professional Dental Cleaning or “Recare” figures prominently in Dream Smile Solutions, Common Dental Problems, and Preventive Dentistry.  It is in many ways the copestone of our collective dental treatments and is fundamental to achieving and maintaining your “Dream Smile”.  For details on Recare click <%= link_to "here", dreamsmiles_cleaning_path %>.<br>
 			</p>
 			<p>
 				<b>More Information</b><br>
