--- a/app/views/static_pages/preventivedentistry.html.erb
+++ b/app/views/static_pages/preventivedentistry.html.erb
@@ -19,7 +19,7 @@
 	            <li><%= link_to "Sealants", preventivedentistry_sealants_path %></li><br>
 	            <li><%= link_to "TLC Athletic Mouthguards", preventivedentistry_athleticmouthguards_path %></li><br>
 	            <li><%= link_to "TLC Dream Smile Diet", preventivedentistry_dreamsmilediet_path %></li><br>
-	            <li><%= link_to "TLC Flouride Treatments", preventivedentistry_flouridetreatment_path %></li><br>
+	            <li><%= link_to "TLC Fluoride Treatments", preventivedentistry_flouridetreatment_path %></li><br>
 	            <li><%= link_to "TLC Oral Hygiene", preventivedentistry_oralhygiene_path %></li>	<br>
 	            <li><%= link_to "TLC Rotadent Toothbrush", preventivedentistry_rotadent_path %></li><br>
 	            <li><%= link_to "TLC Soft Tissue Managment", preventivedentistry_softtissue_path %></li><br>
