--- a/app/views/static_pages/wisdomteeth.html.erb
+++ b/app/views/static_pages/wisdomteeth.html.erb
@@ -40,7 +40,7 @@
 				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”
 			</p>
 			<p>		
-				For definitions related to tooth sensitivity consult Dr. Rothenberg's Dental Dictionary.  And for prompt alleviation and treatment of wisdom teeth symptoms, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
+				For definitions related to wisdom teeth consult Dr. Rothenberg's Dental Dictionary.  And for prompt alleviation and treatment of wisdom teeth symptoms, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>
 		</div>
 	</div>
