--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -155,6 +155,10 @@ td {
   margin-top: 25px;
 }
 
+.email {
+  font-color: red;
+}
+
 .content-container {
 	color: #2a66af;
 	border: 1px solid #2a66af;
@@ -306,6 +310,7 @@ td {
 
     a {
       color: #2a66af;
+      text-decoration: underline;
     }
 }
 
@@ -393,6 +398,10 @@ table.gadget {
       margin-left: 31%;
     }
   }
+
+    h4 {
+    font-size: 14.5px;
+  }
 }
 
 @media (max-width: 979px) {
@@ -409,6 +418,7 @@ table.gadget {
   // .dropdown-menu li{
   //   visibility: hidden;
   // }
+
 }
 
 @media (max-width: 767px) {
