--- a/app/views/static_pages/bridges.html.erb
+++ b/app/views/static_pages/bridges.html.erb
@@ -48,7 +48,7 @@
 			</p>
 			<p>
 				<b>Bridge Appearance</b><br>
-				In its creation, emplacement, and ultimate appearance your bridge  reflects our motto “The Art of Gentle Dentistry.”  We provide for your comfort in the procedure and for your dental health in a completely functional replacement tooth or teeth.  And in artfully shaping and color- matching your bridge, we provide a truly resplendent addition to your “Dream Smile.”
+				In its creation, emplacement, and ultimate appearance your bridge  reflects our motto “The Art of Gentle Dentistry.”  We provide for your comfort in the procedure and for your dental health in a completely functional replacement tooth or teeth.  And in artfully shaping and color- matching your bridge, we provide a truly resplendent addition to your “Dream Smile”.
 			</p>
 			<p>
 				<b>More Information</b><br>
