--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -12,12 +12,12 @@
 		<div class="content-container" style="display:block;">
 		
 			<div class="row-fluid">
-				<div class="span6">
+				<div class="span9">
 					<h3>Office Hours</h3>			
 					<table>
 						<tr>
 							<td>Monday-Thursday</td>
-							<td>8:30am-1pm and 2p-5pm</td>
+							<td>8:30am-1pm and 2pm-5pm</td>
 						</tr>
 						<tr>
 							<td>Friday</td>
@@ -26,7 +26,7 @@
 					</table>	
 					<br><br><br><br>
 				</div>
-				<div class="span6">	
+				<div class="span3">	
 					<%= image_tag 'pocketwatch.jpg' %>	
 				</div>
 			</div>	
@@ -70,12 +70,12 @@
 	</div>
 </div>
 
-<div class="row-fluid" id="email">
+<div class="row-fluid" class="email">
 	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Email Appointment</h3>
 			<p>
-				To make an appointment for a dental problem or a "Dream Smile" treatment please phone the TLC Dental Group at (315) 637-7684 or simply complete the email form below and click on the "Send" button.  We will then call to thank you and confirm your appointment.<br>
+				To make an appointment for a dental problem or a "Dream Smile" treatment please phone the TLC Dental Group at (315) 637-7684 or simply complete the email form below and click on the "Send" button.  We will then call to thank you and confirm your appointment.<br><br>
 
 				This form is programmed solely for making appointments. If you have a dental emergency or wish to change or cancel an appointment please phone our office at (315) 637-7684. 
 			</p>				
@@ -127,7 +127,8 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container">
-			<%= image_tag 'TLC_logo.jpg', :class => "float-right" %>	
+			<%= link_to(image_tag("TLC_logo.jpg", :class => "float-right"), office_toothbrushmailbox_path) %>
+	
 			<h3>Office Address</h3>			
 				<p>
 					<b>7197 Highbridge Road, Fayetteville, NY 13066</b>
