--- a/app/views/static_pages/contouring.html.erb
+++ b/app/views/static_pages/contouring.html.erb
@@ -25,7 +25,7 @@
 				<li>Reduces gum tissue to eliminate a “gummy smile”</li>
 				<li>Lengthens the gum line of a crown for periodontal benefit</li>
 				<li>Reduces a pocket for periodontal benefit</li>
-				<li>Creates your (Dream Smile)</li>
+				<li>Creates your "Dream Smile"</li>
 			</ul>
 
 			<p>
@@ -48,7 +48,7 @@
 			</p>
 			<p>
 				<b>Contouring Appearance</b><br>
-				TLC contouring perfectly reflects our motto “The Art of Gentle Dentistry.”  We provide for your comfort in the procedure and for improved dental health in carefully contoured teeth.  And in artfully shaping your teeth and gums, we provide a truly resplendent addition to your “Dream Smile.”
+				TLC contouring perfectly reflects our motto “The Art of Gentle Dentistry.”  We provide for your comfort in the procedure and for improved dental health in carefully contoured teeth.  And in artfully shaping your teeth and gums, we provide a truly resplendent addition to your “Dream Smile".
 			</p>
 			<p>
 				<b>More Information</b><br>
