--- a/app/views/static_pages/dentalnexus.html.erb
+++ b/app/views/static_pages/dentalnexus.html.erb
@@ -10,7 +10,7 @@
 <div class="row-fluid">
 	<div class="span8 offset2">
 		<p style="color: #0f53a5; margin-top:30px;">
-			Modern research is revealing a closer relationship between your dental health and general. The bacteria that cause preiodontal disease can reach far beyond the oral cavity and may affect these conditions in the following chart:
+			Modern research is revealing a closer relationship between your dental and general health.  The bacteria that cause periodontal disease can reach far beyond the oral cavity and may affect the conditions listed in the chart below.
 		</p>
 		<p style="color: #0f53a5; margin-bottom:55px;">
 			For research updates on that relationship between your dental health and general health, please pay regular visitings to the Wisdom Tooth at tlcwisdomtooth.com
