--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,10 +31,12 @@ our family of staff and patients.</div>
 				<h2>The Art of Gentle Dentistry</h2></b></i>
 			</div>
 			<div class="span2">
-				<i><h4 style="line-height:25px; margin-top: -6px;">315-637-7684<br>
+				<i><h4 style="line-height:25px; margin-top: -6px;">
 				7197 Highbridge Rd.
 				<br>Fayetteville, NY
-				<br>Directions<br><span class="email">Email Us</span></h4></i>
+				<br>Directions<br><span class="email">Email Us<br>
+				315-637-7684
+				</span></h4></i>
 			</div>			
 		</div>
 	</div>
