bonding text fixed

--- a/app/views/static_pages/bonding.html.erb
+++ b/app/views/static_pages/bonding.html.erb
@@ -11,7 +11,7 @@
 		<div class="contact-container">
 			<h3>Dental Bonding</h3> 
 			<p>
-				For more than a quarter of a century our calling card has been “We cater to dental cowards” and over this time our founder, Dr. Rothenberg, has set the Syracuse benchmark for gentle dentistry. Today, TLC draws on an array of resources to assure your dental comfort.
+				Bonding or Composite Bonding is an alternative procedure to veneers in which a tooth-colored composite resin is applied to the surface of a tooth to dramatically improve dental appearance.  It is a simple, comfortable, and popular way to cover imperfections and achieve a radiant smile.
 			</p>
 			<%= image_tag 'bonding.jpg', :class => "float-right" %>	
 			<h6><b>Bonding</b></h6>
@@ -29,7 +29,7 @@
 
 			<p>
 				<b>Bonding Procedure</b><br>
-				For more than a quarter of a century our calling card has been “We cater to dental cowards” and over this time our founder, Dr. Rothenberg, has set the Syracuse benchmark for gentle dentistry. Today, TLC draws on an array of resources to assure your dental comfort.
+				Unlike veneers, bonding is generally a one visit procedure.  Initially, we discuss your desired dental enhancements and carefully examine your teeth to establish their suitability for bonding. We then draw on our years of experience to select a composite resin color that closely matches your teeth, microscopically etch the tooth surface, lightly layer it with a conditioning liquid, and apply the colored composite resin.  Once in place, we carefully smooth the composite into shape, cure it with a special bonding light, and then polish it to give your teeth a new and vibrant look. 
 			</p>
 			<p>
 				<b>Gentle Comfort</b><br>
