--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -125,7 +125,7 @@ our family of staff and patients.</div>
 		            <li><%= link_to "Sealants", preventivedentistry_sealants_path %></li>
 		            <li><%= link_to "Athletic Mouthguards", preventivedentistry_athleticmouthguards_path %></li>
 		            <li><%= link_to "Dream Smile Diet", preventivedentistry_dreamsmilediet_path %></li>
-		            <li><%= link_to "Flouride Treatments", preventivedentistry_flouridetreatment_path %></li>
+		            <li><%= link_to "Fluoride Treatments", preventivedentistry_flouridetreatment_path %></li>
 		            <li><%= link_to "Oral Hygiene", preventivedentistry_oralhygiene_path %></li>	
 		            <li><%= link_to "Rotadent Toothbrush", preventivedentistry_rotadent_path %></li>
 		            <li><%= link_to "Soft Tissue Management", preventivedentistry_softtissue_path %></li>
