--- a/app/views/static_pages/badbreath.html.erb
+++ b/app/views/static_pages/badbreath.html.erb
@@ -18,7 +18,7 @@
 				<li>Poor dental hygiene</li>
 				<li>Infections in the mouth</li>
 				<li>Dry Mouth (Xerostomia)</li>
-				<li>Respiratory trace infections</li>
+				<li>Respiratory tract infections</li>
 				<li>Diseases of the liver, lung, kidney, digestive tract, and sinus; diabetes, reflux, etc.</li>
 				<li>Smoking and chewing tobacco</li>
 			</ul>
