--- a/app/views/static_pages/bridges.html.erb
+++ b/app/views/static_pages/bridges.html.erb
@@ -47,8 +47,8 @@
 				The durability of a bridge, just like that of a normal tooth, is largely dependent on good dental hygiene and regular dental checkups.  With proper care, bridges may last for many years. 
 			</p>
 			<p>
-				<b>Bridge Appearance</b><br>
-				In its creation, emplacement, and ultimate appearance your bridge  reflects our motto “The Art of Gentle Dentistry.”  We provide for your comfort in the procedure and for your dental health in a completely functional replacement tooth or teeth.  And in artfully shaping and color- matching your bridge, we provide a truly resplendent addition to your “Dream Smile”.
+				<b>Recare Appearance</b><br>
+				In its creation, emplacement, and ultimate appearance your "Recare" reflects our motto “The Art of Gentle Dentistry”.  We provide for your comfort in the procedure and for your dental health in a completely functional replacement tooth or teeth.  And in artfully shaping and color- matching your bridge, we provide a truly resplendent addition to your “Dream Smile".
 			</p>
 			<p>
 				<b>More Information</b><br>
