--- a/app/views/static_pages/commondentalproblems.html.erb
+++ b/app/views/static_pages/commondentalproblems.html.erb
@@ -8,7 +8,7 @@
 </div>
 <div class="row-fluid">
 	<div class="span10 offset1">
-		<div class="contact-container">
+		<div class="content-container">
 			<p>
 				To assure your dental health the Wisdom Tooth has compiled the following summaries of common dental problems and solutions.  For prompt treatment and alleviation of any of these problems, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>
