--- a/app/views/static_pages/contouring.html.erb
+++ b/app/views/static_pages/contouring.html.erb
@@ -33,7 +33,7 @@
 				Our first step in TLC tooth contouring is a careful digital X-ray exam to determine the size and location of the tooth’s pulp (the center of the tooth that contains the nerves and blood vessels) and whether contouring or another procedure such as bonding or veneers would be most appropriate.<br>
 			</p>
 			<p>
-				If the exam is favorable for tooth contouring, a handpiece or laser is used to gently sculpt the tooth by removing traces of surface enamel.  Once properly shaped and adjusted, the tooth is smoothed, and polished.  In less than thirty minutes, an imperfect tooth is transformed into a radiant tooth worthy of a (Dream Smile).<br>
+				If the exam is favorable for tooth contouring, a handpiece or laser is used to gently sculpt the tooth by removing traces of surface enamel.  Once properly shaped and adjusted, the tooth is smoothed, and polished.  In less than thirty minutes, an imperfect tooth is transformed into a radiant tooth worthy of a "Dream Smile".<br>
 			</p>
 			<p>
 				The first step in aesthetic gum contouring is a thorough exam of your gum tissue for treatment.  If our exam is favorable and your gum line is irregular, we will mark a desired line and gently sculpt the gum to conform to the line thereby providing your teeth with an enhancing rather than distracting gum line.<br>
