--- a/app/views/static_pages/gentledentistry.html.erb
+++ b/app/views/static_pages/gentledentistry.html.erb
@@ -110,8 +110,9 @@
 				<div class="span5">			
 					<h3>Comforting Sedation</h3>
 				</div>
-				<div class="span7">
-					<%= image_tag 'sedation.jpg' %>
+				<div class="span7" style="text-align:center;">
+					<iframe width="224" height="126" src="//www.youtube.com/embed/-d-h7JHrmMU" frameborder="0" allowfullscreen></iframe><br>
+					<span style="text-align:center;">Video</span>
 				</div>
 			</div>
 			<p style="margin-top:20px;"> 
