--- a/app/views/static_pages/newpatients.html.erb
+++ b/app/views/static_pages/newpatients.html.erb
@@ -29,7 +29,7 @@
 				Should you prefer to leisurely complete the Health History and New Patient forms before arriving at TLC Dental for your first visit, we have made them available for you in pdf format.  To view and print these forms, your computer must have the Adobe Acrobat Reader program.  If your computer lacks this program, you may easily and quickly download it by clicking below.
 			</p>				
 			<ul>
-				<li>Adobe Acrobat Reader</li>
+				<li><%= link_to "Click to download Adobe Acrobat Reader", "http://get.adobe.com/reader/" %></li>
 				<li>Health History Form</li>
 				<li>New Patient Form </li>
 			</ul>
