--- a/app/views/static_pages/oralhygiene.html.erb
+++ b/app/views/static_pages/oralhygiene.html.erb
@@ -69,8 +69,8 @@
 				<b>Oral Hygiene for Children</b>
 			</p>
 			<ul>
-				<li>Even before the arrival of primary teeth, parents should wipe an infant’s mouth with a washcloth or gauze pad to prevent build-up of plaque and bacteria</li>
-				<li>Small children should be given a safe “toddler brush” with an oblong shape that prevents it from being swallowed</li>
+				<li>Even before the arrival of primary teeth, parents should wipe an infant’s mouth with a washcloth or gauze pad to prevent build-up of plaque and bacteria</li><br>
+				<li>Small children should be given a safe “toddler brush” with an oblong shape that prevents it from being swallowed</li><br>
 				<li>Children under the age of 6 should be given only a baby-pea sized amount of toothpaste and should not be given fluoride rinses.</li>
 			</ul>
 			<p>
@@ -78,7 +78,7 @@
 			</p>
 			<p>
 				<b>TLC Recare</b><br>
-				Even the most exacting personal oral hygiene is not sufficient to protect your dental health and maintain your “Dream Smile”.  Only a trained hygienist with advanced professional equipment in a biannual or, if needed, more frequent Professional Dental Cleaning or “Recare” can perform the diagnostic, preventive, and aesthetic procedures that are essential for your dental health and “Dream Smile”. Indeed, without regular Recares you risk stains, gum disease, bone loss, and even oral cancer that cannot be detected and addressed by personal oral hygiene.  Click here for details on this vital dental procedure.<br>
+				Even the most exacting personal oral hygiene is not sufficient to protect your dental health and maintain your “Dream Smile”.  Only a trained hygienist with advanced professional equipment in a biannual or, if needed, more frequent Professional Dental Cleaning or “Recare” can perform the diagnostic, preventive, and aesthetic procedures that are essential for your dental health and “Dream Smile”. Indeed, without regular Recares you risk stains, gum disease, bone loss, and even oral cancer that cannot be detected and addressed by personal oral hygiene.  Click <%= link_to "here", dreamsmiles_path %> for details on this vital dental procedure.<br>
 			</p>
 			<p>
 				<b>TLC Soft Tissue Management</b><br>
@@ -90,3 +90,4 @@
 			</p>
 		</div>
 	</div>
+</div>
