--- a/app/views/static_pages/softtissue.html.erb
+++ b/app/views/static_pages/softtissue.html.erb
@@ -46,7 +46,7 @@
 			</p>
 				<p>
 				<b>More Information</b><br>
-				For more information on Soft Tissue Management, click on Dr. Rothenberg’s Dental Encyclopedia. And for a personal STM program, please call the TLC Dental Group, Fayetteville / Manlius office at 315-637-7684.
+				For definitions related to Soft Tissue Management consult Dr. Rothenberg's Dental Dictionary. And for a personal STM program, please call the TLC Dental Group, Fayetteville / Manlius office at 315-637-7684.
 			</p>
 		</div>
 	</div>
