--- a/app/views/static_pages/preventivedentistry.html.erb
+++ b/app/views/static_pages/preventivedentistry.html.erb
@@ -8,7 +8,7 @@
 </div>
 <div class="row-fluid">
 	<div class="span10 offset1">
-		<div class="contact-container">
+		<div class="content-container">
 			<p>
 				To assure your dental health we have compiled the following summaries of preventive dental treatments.  To benefit from one or more of these treatments please call the TLC Dental Group Fayetteville / Manlius office at 315-637-7684.
 			</p>
