--- a/app/views/static_pages/tobaccocessationprogram.html.erb
+++ b/app/views/static_pages/tobaccocessationprogram.html.erb
@@ -48,7 +48,7 @@
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For more information on tobacco cessation, click on Dr. Rothenberg’s Dental Encyclopedia. And for a personal Tobacco Cessation Program, please call the TLC Dental Group, Fayetteville / Manlius office at 315-637-7684. 
+				For definitions related to  tobacco cessation consult Dr. Rothenberg's Dental Dictionary. And for a personal Tobacco Cessation Program, please call the TLC Dental Group, Fayetteville / Manlius office at 315-637-7684. 
 			</p>
 		</div>
 	</div>
