--- a/app/views/static_pages/cleaning.html.erb
+++ b/app/views/static_pages/cleaning.html.erb
@@ -57,7 +57,7 @@
 				A biannual or, if needed, a more frequent “Recare” is essential to achieve and maintain your lifelong “Dream Smile”.
 			</p>
 			<p>
-				<b>Bridge Appearance</b><br>
+				<b>"Recare" Appearance</b><br>
 				A biannual “Recare” is expressive of our dictum “Dream Smiles for Life.”  Throughout the procedure we provide for your comfort and your continued dental health. After an hour of gentle care and cleaning, you enjoy a renewed and gleaming “Dream Smile”.
 			</p>
 			<p>
