--- a/app/views/static_pages/oralhygiene.html.erb
+++ b/app/views/static_pages/oralhygiene.html.erb
@@ -20,7 +20,7 @@
 			</p>
 
 			<p>
-				<b>Personal Oral Hygiene</b><br>
+				<h4 style="text-align:left; margin-bottom:-17px;">Personal Oral Hygiene</h4><br>
 				TLC Dental has prepared a Personal Oral Hygiene booklet to assist you in practicing good oral hygiene. The following are excerpts from the booklet:
 			</p>
 			<%= image_tag 'dentalfloss.jpg', :class => "float-left" %>
@@ -33,7 +33,7 @@
 			</ul>
 			<p>
 				<b>The Advantages of TLC Rotadent Brushing</b><br>
-				The Rotadent has proven far more effective than any manual or electric toothbrush in maintaining dental health.  Click <%= link_to "here", preventivedentistry_rotadent_path %> to learn the many advantages of a Rotadent.<br>
+				The Rotadent has proven far more effective than any manual or electric toothbrush in maintaining dental health.  Click <%= link_to "here", dreamsmiles_cleaning_path %> to learn the many advantages of a Rotadent.<br>
 			</p>
 			<%= image_tag 'rotadent.jpg', :class => "float-right" %>
 			<p>
@@ -74,7 +74,7 @@
 				<li>Children under the age of 6 should be given only a baby-pea sized amount of toothpaste and should not be given fluoride rinses.</li>
 			</ul>
 			<p>
-				<b>Professional Oral Hygiene</b>
+				<h4 style="text-align:left; margin-bottom:-7px;">Professional Oral Hygiene</h4>
 			</p>
 			<p>
 				<b>TLC Recare</b><br>
