--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -31,6 +31,13 @@ td {
   text-align: left;
 }
 
+.above-nav {
+  a {
+    color: #0f53a5;
+    text-decoration: none;
+  }
+}
+
 .container {
   -webkit-box-shadow:  1px 1px 15px 10px rgba(0, 0, 0, .1);      
   box-shadow:  1px 1px 15px 10px rgba(0, 0, 0, .1);
