--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@ our family of staff and patients.</div>
 				<i><h4 style="line-height:25px; margin-top: -6px;">
 				7197 Highbridge Rd.
 				<br>Fayetteville, NY
-				<br>Directions<br>Email Us<br>
+				<br>Directions<br><%= link_to "Email Us", contact_path %><br>
 				<span style="color:red;">315-637-7684</span>
 				</h4></i>
 			</div>			
