--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@ our family of staff and patients.</div>
 			</div>
 			<div class="span2">
 				<i><h4 style="line-height:25px; margin-top: -6px;">
-				7197 Highbridge Rd.
+				7197 Highbridge
 				<br>Fayetteville, NY
 				<br>Directions<br><%= link_to "Email Us", contact_path %><br>
 				<span style="color:red;">315-637-7684</span>
