--- a/app/views/static_pages/oralhygiene.html.erb
+++ b/app/views/static_pages/oralhygiene.html.erb
@@ -33,7 +33,7 @@
 			</ul>
 			<p>
 				<b>The Advantages of TLC Rotadent Brushing</b><br>
-				The Rotadent has proven far more effective than any manual or electric toothbrush in maintaining dental health.  Click <%= link_to "here", dreamsmiles_cleaning_path %> to learn the many advantages of a Rotadent.<br>
+				The Rotadent has proven far more effective than any manual or electric toothbrush in maintaining dental health.  Click <%= link_to "here", preventivedentistry_rotadent_path %> to learn the many advantages of a Rotadent.<br>
 			</p>
 			<%= image_tag 'rotadent.jpg', :class => "float-right" %>
 			<p>
@@ -78,7 +78,7 @@
 			</p>
 			<p>
 				<b>TLC Recare</b><br>
-				Even the most exacting personal oral hygiene is not sufficient to protect your dental health and maintain your “Dream Smile”.  Only a trained hygienist with advanced professional equipment in a biannual or, if needed, more frequent Professional Dental Cleaning or “Recare” can perform the diagnostic, preventive, and aesthetic procedures that are essential for your dental health and “Dream Smile”. Indeed, without regular Recares you risk stains, gum disease, bone loss, and even oral cancer that cannot be detected and addressed by personal oral hygiene.  Click <%= link_to "here", dreamsmiles_path %> for details on this vital dental procedure.<br>
+				Even the most exacting personal oral hygiene is not sufficient to protect your dental health and maintain your “Dream Smile”.  Only a trained hygienist with advanced professional equipment in a biannual or, if needed, more frequent Professional Dental Cleaning or “Recare” can perform the diagnostic, preventive, and aesthetic procedures that are essential for your dental health and “Dream Smile”. Indeed, without regular Recares you risk stains, gum disease, bone loss, and even oral cancer that cannot be detected and addressed by personal oral hygiene.  Click <%= link_to "here", dreamsmiles_cleaning_path %> for details on this vital dental procedure.<br>
 			</p>
 			<p>
 				<b>TLC Soft Tissue Management</b><br>
