--- a/app/views/static_pages/rotadent.html.erb
+++ b/app/views/static_pages/rotadent.html.erb
@@ -28,7 +28,7 @@
 				<li>Three bushing modes: normal, gentle, and specialty </li>
 			</ul>
 			<div class="row-fluid" style="text-align:center;">
-				<div class="span12">
+				<div class="span12" style="margin-top:15px;">
 					<%= image_tag 'rotadentinfo.jpg' %>
 				</div>
 			</div><br>
@@ -47,11 +47,11 @@
 			<p>
 				<b>TLC Rotadent vs. Drugstore Electric Toothbrushes</b><br>
 				The comparison between a TLC Rotadent and a drugstore electric toothbrush is akin to that of a TLC tooth whitening and a drugstore tooth whitening.  There is simply no comparison.   The TLC Rotadent dramatically outperforms any drugstore electric toothbrush as evidenced by this video.<br>
-				<div class="row-fluid" style="text-align:center;">
+<!-- 				<div class="row-fluid" style="text-align:center;">
 					<div class="span12">
 						<iframe width="560" height="315" src="//www.youtube.com/embed/gYq4wXA8N4c" frameborder="0" allowfullscreen style="margin-top:15px;"></iframe>
 					</div>
-				</div>
+				</div> -->
 			</p>
 			<p>
 				<b>Lifetime Warranty</b><br>
