--- a/app/views/static_pages/dentalnexus.html.erb
+++ b/app/views/static_pages/dentalnexus.html.erb
@@ -15,7 +15,7 @@
 	</div>
 </div>
 
-<div class="row-fluid" style="text-align:center;">
+<div class="row-fluid" style="text-align:center; margin-top:15px;">
 	<div class="span10 offset1">
 		<%= image_tag 'nexuschart.jpg' %>
 	</div>
