fixed tooth fairy

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -345,6 +345,14 @@ td {
   width: 200px;
 }
 
+.toothfairycolumn {
+  width: 200px;
+}
+
+.toothfairycolumn img {
+  width: 400px;
+}
+
 .leftcolumn {
   width: 145px;
   text-align: left; 
